[package]
name = "armoured_rust"
version = "0.1.3"
edition = "2021"

exclude = ["/.github", "/dev_scripts"]

[features]
arm_feat_lse = []
arm_feat_lrcpc = ["arm_feat_lse"]
arm_feat_ls64_accdata = ["arm_feat_lse"]
arm_feat_ls64_v = ["arm_feat_lse"]
arm_feat_ls64 = ["arm_feat_lse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bad64 = "0.6.0"
bit_seq = "0.2.1"
libc = "0.2.144"
mockall = "0.11.4"
num = "0.4.0"
